// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TouchableInput when the error prop is set renders the TouchableInput component with error style and the given error message 1`] = `
<View
  style={
    Object {
      "height": 98,
    }
  }
  testID="testID"
>
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "NotoSansJP-Black",
          "fontSize": 16,
          "fontWeight": undefined,
          "letterSpacing": -0.3,
          "lineHeight": 22,
          "marginBottom": 4,
        }
      }
      testID="touchable-input-label"
    >
      
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFEBF2",
          "borderRadius": 8,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 52,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#000000",
            "flex": 1,
            "fontFamily": "NotoSansJP-Bold",
            "fontSize": 14,
            "fontWeight": undefined,
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="touchable-input-text"
      >
        Sample value
      </Text>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 23,
              "width": 14,
            },
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevronRight.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="touchable-input-icon"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#D60A50",
          "fontFamily": "NotoSansJP-Regular",
          "fontSize": 12,
          "fontWeight": undefined,
          "letterSpacing": 0,
          "lineHeight": 16,
        }
      }
      testID="touchable-input-error"
    >
      Sample error
    </Text>
  </View>
</View>
`;

exports[`TouchableInput when the label prop is set renders the TouchableInput component with the label 1`] = `
<View
  style={
    Object {
      "height": 98,
    }
  }
  testID="testID"
>
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "NotoSansJP-Black",
          "fontSize": 16,
          "fontWeight": undefined,
          "letterSpacing": -0.3,
          "lineHeight": 22,
          "marginBottom": 4,
        }
      }
      testID="touchable-input-label"
    >
      Sample label
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F2F2F2",
          "borderRadius": 8,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 52,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#000000",
            "flex": 1,
            "fontFamily": "NotoSansJP-Bold",
            "fontSize": 14,
            "fontWeight": undefined,
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="touchable-input-text"
      >
        Sample value
      </Text>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 23,
              "width": 14,
            },
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevronRight.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="touchable-input-icon"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#D60A50",
          "fontFamily": "NotoSansJP-Regular",
          "fontSize": 12,
          "fontWeight": undefined,
          "letterSpacing": 0,
          "lineHeight": 16,
        }
      }
      testID="touchable-input-error"
    >
      
    </Text>
  </View>
</View>
`;

exports[`TouchableInput when the required prop is set renders the TouchableInput component with a mandatory mark next to the label 1`] = `
<View
  style={
    Object {
      "height": 98,
    }
  }
  testID="testID"
>
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "NotoSansJP-Black",
          "fontSize": 16,
          "fontWeight": undefined,
          "letterSpacing": -0.3,
          "lineHeight": 22,
          "marginBottom": 4,
        }
      }
      testID="touchable-input-label"
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#D60A50",
          "fontFamily": "NotoSansJP-Bold",
          "fontSize": 14,
          "fontWeight": undefined,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginLeft": 4,
        }
      }
      testID="touchable-input-required"
    >
      *
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F2F2F2",
          "borderRadius": 8,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 52,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#000000",
            "flex": 1,
            "fontFamily": "NotoSansJP-Bold",
            "fontSize": 14,
            "fontWeight": undefined,
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="touchable-input-text"
      >
        Sample value
      </Text>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 23,
              "width": 14,
            },
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevronRight.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="touchable-input-icon"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#D60A50",
          "fontFamily": "NotoSansJP-Regular",
          "fontSize": 12,
          "fontWeight": undefined,
          "letterSpacing": 0,
          "lineHeight": 16,
        }
      }
      testID="touchable-input-error"
    >
      
    </Text>
  </View>
</View>
`;

exports[`TouchableInput with the default props renders the TouchableInput component correctly 1`] = `
<View
  style={
    Object {
      "height": 98,
    }
  }
  testID="testID"
>
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "NotoSansJP-Black",
          "fontSize": 16,
          "fontWeight": undefined,
          "letterSpacing": -0.3,
          "lineHeight": 22,
          "marginBottom": 4,
        }
      }
      testID="touchable-input-label"
    >
      
    </Text>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F2F2F2",
          "borderRadius": 8,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 52,
          "paddingHorizontal": 12,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#000000",
            "flex": 1,
            "fontFamily": "NotoSansJP-Bold",
            "fontSize": 14,
            "fontWeight": undefined,
            "letterSpacing": 0,
            "lineHeight": 20,
          }
        }
        testID="touchable-input-text"
      >
        Sample value
      </Text>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 23,
              "width": 14,
            },
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "testUri": "../../../src/assets/icons/chevronRight.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="touchable-input-icon"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginVertical": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#D60A50",
          "fontFamily": "NotoSansJP-Regular",
          "fontSize": 12,
          "fontWeight": undefined,
          "letterSpacing": 0,
          "lineHeight": 16,
        }
      }
      testID="touchable-input-error"
    >
      
    </Text>
  </View>
</View>
`;
